@@ -30,6 +30,10 @@ pull-from-giant:
 #	git push --tags ssh://git-keiju@www.sota.me/var/www/html/fairy/fairy.git
 
 
+doc/deep-connect.html: doc/deep-connect.rd
+	env RUBYLIB= RUBYOPT= rd2 -rrd/rd2html-lib --html-title="DeepConnect"  doc/deep-connect.rd > doc/deep-connect.html
+
+
 # tar archives
 TGZ_FILES = $(SRCS)
 
