@@ -4,10 +4,10 @@
   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<title>doc/deep-connect.rd</title>
+<title>DeepConnect</title>
 </head>
 <body>
-<p>分散オブジェクトシステム DeepConnect</p>
+<p>分散オブジェクトフレームワーク DeepConnect</p>
 <h2><a name="label-0" id="label-0">["DeepConnect とは?"]</a></h2><!-- RDLabel: "DeepConnect とは?" -->
 <ul>
 <li>分散オブジェクトシステムを実現するためのフレームワーク</li>
